--- a/index.html
+++ b/index.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-   <script src="main.js" type="module"></script>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-   <link rel="stylesheet" href="style.css">
+    <script src="main.js" type="module"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Furesz Bence</title>
 </head>
-
 <body>
     <main>
-        <nav></nav>
         <header>
             <h1>Adatok listázása</h1>
-            <p></p>
-            
         </header>
-        <section>
-            <input type="text" id="nev" placeholder="név" name="nev">
-            <input type="text" id="szam" placeholder="pl.:>12, =12," name="szam">
-            <input type="text" id="fajta" placeholder="fajta" name="fajta">
-        </section>
         <article>
-            <div class="table"></div>
+            <section>
+                <input type="text" id="nev" placeholder="nev" name="nev"></input>
+                <input type="text" id="kor" placeholder="kor > 1" name="kor"></input>
+                <input type="text" id="fajta" placeholder="fajta" name="fajta"></input>
+            </section>
         </article>
         <footer>Furesz Bence</footer>
     </main>
+    
 </body>
-
 </html>
