--- a/public.html
+++ b/public.html
@@ -9,14 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script src="main.js" type="module"></script>
+    <script src="public.js" type="module"></script>
     <link rel="stylesheet" href="stilus.css">
 </head>
 
 <body>
     <main>
         <header>
-            <h1>Adatok listázása</h1>
+            <h1>Webshop</h1>
         </header>
         <nav>
             <ul>
@@ -24,12 +24,8 @@
                 <li><a href="public.html">Public felület</a></li>
             </ul>
         </nav>
-        <section>
-            <input type="text" id="nev" placeholder="név" name="nev">
-            <input type="number" id="kor" placeholder="pl:>12..12>" name="kor">
-            <input type="text" id="fajta" placeholder="fajta" name="fajta">
-        </section>
-        <article>
+        
+        <article id="publik" class="row container">
             
         </article>
         <footer class="bg-dark text-center">
