--- a/public.html
+++ b/public.html
@@ -17,8 +17,8 @@
 <body class="container">
     <main>
         <header class="row">
-            <h1 class="col-md-8">Webshop</h1>
-            <h1 class="col-md-4">Kosár</h1>
+            <h1 class="col-md-7">Webshop</h1>
+            <h1 class="col-md-5">Kosár</h1>
         </header>
         <nav>
             <ul>
@@ -26,7 +26,7 @@
             </ul>
         </nav>
         <hr>
-        <div class="row">
+        <div class="row shop justify-content-center">
             <div class="col-md-7 p-2">
               <article id="publik"></article>
             </div>
