--- a/public.html
+++ b/public.html
@@ -29,6 +29,15 @@
         <div class="row shop justify-content-center">
             <div class="col-md-7 p-2">
               <article id="publik"></article>
+              <article class="galleria"></article>
+              <div class="lightbox" style="display: none;">
+                <div class="lightbox-content">
+                  <img class="nagykep" src="">
+                  <div class="gombok">
+                    <button class="bal">Előző</button>
+                    <button class="jobb">Következő</button>
+                  </div>
+                </div>
             </div>
             <div class="col-md-5 p-2">
               <aside>
