--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="main.js" type="module"></script>
+    <script src="gallery.js" type="module"></script>
     <link rel="stylesheet" href="stilus.css">
  
 </head>
 
 <body>   
+
 
     <main>
         <header>
