--- a/public.html
+++ b/public.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="hu">
 
@@ -55,13 +56,13 @@
         <hr>
         <div class="row shop justify-content-center">
             <div class="col-md-7 p-2">
-              <article id="publik"></article>
+              <article class="row p-2" id="publik"></article>
               
               
             </div>
             <div class="col-md-5 p-2">
               <aside>
-                <article id="kosar"></article>
+                <article class="row" id="kosar"></article>
               </aside>
             </div>
           </div>
