--- a/index.html
+++ b/index.html
@@ -16,18 +16,14 @@
 </head>
 
 <body>   
-
-
     <main>
-        <header>
+        <header class="header2">
             <h1>Adatok listázása</h1>
-            <ul>
-                
-                <li><a href="public.html">Public felület</a></li>
-            </ul>
         </header>
         <nav>
-
+            <ul>
+                <li><a href="public.html">Public felület</a></li>
+            </ul>
         </nav>
         <section>
             <input type="text" id="nev" placeholder="név" name="nev">
