--- a/public.html
+++ b/public.html
@@ -46,7 +46,7 @@
     <main class="main2">
         <header class="row">
             <h1 class="col-md-7">Webshop</h1>
-            <h1 class="col-md-5">Kosár</h1>
+            <h1 class="col-md-5 kosar">Kosár</h1>
         </header>
         <nav>
             <ul>
@@ -60,6 +60,7 @@
               
               
             </div>
+            <h1 class="kosarMobil">Kosár</h1>
             <div class="col-md-5 p-2">
               <aside>
                 <article class="row" id="kosar"></article>
